@@ -1,3 +1,7 @@
+7 November 2008: Matthijs
+	- Bugfix: don't fclose if logfile == NULL.
+	- Some checks for != NULL after region_create, region_alloc.
+
 30 October 2008: Matthijs
 	- Allow escape characters in literal dnames
 	- Fix typo in zonec manpage
